# trixel-2

./: Cargo.toml  README.md
trixel-core/: Cargo.toml
trixel-core/src/: lib.rs
trixel-desktop/: Cargo.toml
trixel-desktop/src/: app.rs  lib.rs  main.rs  painting.rs
