[package]
name = "trixel_desktop"
version = "0.1.0"
authors = ["glendc <contact@glendc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.13"
egui = "0.13"
emath = "0.13"
epaint = "0.13"

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"]
